feat: add get available tasks
